谷粒商城完工

--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
     <img src="/static/index/img/top_find_logo.png" alt="">
     <div class="input_find">
       <input type="text" placeholder="卸妆水" />
-      <span style="background: url(/static/index/img/img_12.png) 0 -1px;"></span>
+      <span style="background: url(static/index/img/img_12.png) 0 -1px;"></span>
       <a href="#"><img src="/static/index/img/img_09.png" /></a>
     </div>
   </div>
@@ -108,6 +108,7 @@
         <li>
           <a href="http://member.gulimall.com/memberOrder.html">我的订单</a>
         </li>
+
 
       </ul>
     </div>
@@ -525,27 +526,6 @@
         </div>
         <div class="swiper-slide">
           <ul>
-            <li>
-              <img src="/static/index/img/section_second_list_img6.jpg" alt="">
-              <p>Apple iMac 21.5英寸一体机（2017新款四核Core i5 处理器/8GB内存/1TB/RP555显卡/4K屏 MNDY2CH/A） Apple iMac 21.5英寸一体机（2017新款四核Core i5 处理</p>
-              <span>¥9588.00</span><s>¥10288.00</s>
-            </li>
-            <li>
-              <img src="/static/index/img/section_second_list_img7.jpg" alt="">
-              <p>中柏（Jumper）EZpad 4S Pro 10.6英寸二合一平板电脑（X5 z</p>
-              <span>¥848.00</span><s>¥899.00</s>
-            </li>
-            <li>
-              <img src="/static/index/img/section_second_list_img8.jpg" alt="">
-              <p>飞利浦（PHILIPS）电动牙刷HX6761/03亮白型成人充电式声波震动牙刷粉色 飞利浦（PHILIPS）电动牙刷HX6761/03亮白型成人充电式声波
-              </p>
-              <span>¥379.00</span><s>¥698.00</s>
-            </li>
-            <li>
-              <img src="/static/index/img/section_second_list_img9.jpg" alt="">
-              <p>美的(Midea) 258升 变频智能三门冰箱 一级能效 风冷无霜 中门</p>
-              <span>¥3088.00</span><s>¥3299.00</s>
-            </li>
             <li>
               <img src="/static/index/img/section_second_list_img10.jpg" alt="">
               <p>【第二件减50元】蒙羊 内蒙古羔羊羊肋排 2.4斤</p>
